# langgraph-customer-support

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject-editable-install.md  pyproject.toml
langchain_agent/: requirements.txt
langchain_agent/agents/: __init__.py  base.py  json_agent.py
langchain_agent/middleware/: base.py  langchain_official.py
langchain_agent/prompts/: base.py
langchain_agent/schemas/: base.py
langchain_agent/tools/: base.py
langchain_agent/utils/: __init__.py  agent_output_printer.py  llm_factory.py  rich_display.py
langgraph_customer_support/: __init__.py  config.py  graph.py  llm.py  nodes.py  prompts.py  requirements.txt  routes.py  state.py
src/: main.py
src/static/: index.html
